# PiBlock

./: .gitignore  ACCOUNTS_SYSTEM.md  SECURITY_SUMMARY.md  accounts.go  apihandlers.go  apiserver.go  authapi.go  blocklist.go  blockpage.go  build_all.ps1  build_all.sh  config.go  dnsserver.go  go.mod  go.sum  macdetect.go  main.go  rustffi.go  rustffi_nocgo.go  rustffi_windows.go  userfilter.go
.github/workflows/: windows-build.yml
data/: accounts.db
deploy/: install_and_run.sh  nginx-piblock.conf  piblock.service.template
installer/: piblock.nsi
rustdns/: Cargo.toml  README.md  build_windows.cmd  build_windows.ps1  run-linux-redirect.sh  run-windows-portproxy.ps1
rustdns/include/: rustdns.h
rustdns/src/: blocklist.rs  control.rs  lib.rs  main.rs  runner.rs  server.rs  state.rs
web/: .gitignore  index.html  package.json  server.js  vite.config.js
web/src/: App.jsx  AuthGuard.jsx  main.jsx  styles.css  styles.scss
