[package]
name = "rustdns"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trust-dns-proto = "0.23"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
once_cell = "1.20"
